ffi/poc/cpp/corpus/nounk/include/ak_abi.h

/* ---- section 4: common vocabulary (plan.FIXED) --------------------------------- */
typedef struct ak_enc_ctx ak_enc_ctx;
typedef struct ak_dec_ctx ak_dec_ctx;
/* ABI v1 section 6: a host-driven loop over one repeated/packed/map field. */
typedef int32_t (*ak_loop_f)(ak_enc_ctx *ctx, const void *obj, int64_t token);
/* ABI v1 section 4, decode: an OFFSET into the buffer the host handed in. */
struct ak_span {
  uint32_t off;
  uint32_t len;
  uint32_t coder;
};
typedef struct ak_span ak_span;
/* Decode group for `TaskOptionsOptionsEntry`. */
struct ak_dfix_TaskOptionsOptionsEntry {
  struct ak_span key;
  struct ak_span value;
  uint32_t presence;
};
/* Decode group for `TaskDetailed`. */
struct ak_dfix_TaskDetailed {
  struct ak_span id;
  struct ak_span session_id;
  struct ak_span owner_pod_id;
  int32_t status;
  struct ak_span status_message;
  struct ak_dfix_TaskOptions options;
  struct ak_dfix_Timestamp created_at;
  struct ak_dfix_Timestamp submitted_at;
  struct ak_dfix_Timestamp started_at;
  struct ak_dfix_Timestamp ended_at;
  struct ak_dfix_Timestamp pod_ttl;
  struct ak_dfix_TaskOutput output;
  struct ak_span pod_hostname;
  struct ak_dfix_Timestamp received_at;
  struct ak_dfix_Timestamp acquired_at;
  struct ak_dfix_Duration creation_to_end_duration;
  struct ak_dfix_Duration processing_to_end_duration;
  struct ak_span initial_task_id;
  struct ak_dfix_Duration received_to_end_duration;
  struct ak_dfix_Timestamp processed_at;
  struct ak_dfix_Timestamp fetched_at;
  struct ak_span payload_id;
  struct ak_span created_by;
  uint32_t presence;
};
/* Decode group for `TaskSummary`. */
struct ak_dfix_TaskSummary {
  struct ak_span id;
  struct ak_span session_id;
  struct ak_dfix_TaskOptions options;
  int32_t status;
  struct ak_dfix_Timestamp created_at;
  struct ak_span error;
  struct ak_span status_message;
  int64_t count_data_dependencies;
  uint32_t presence;
};
/* Decode group for `Probe`. */
struct ak_dfix_Probe {
  struct ak_span id;
  int32_t opt_count;
  struct ak_span opt_label;
  uint8_t opt_flag;
  uint32_t body_case;
  int64_t body_as_int;
  struct ak_span body_as_text;
  struct ak_span body_as_blob;
  struct ak_dfix_Timestamp body_as_stamp;
  struct ak_dfix_Empty body_as_nothing;
  uint32_t presence;
};
/* Encode group for `UploadResultData`. */
struct ak_efix_UploadResultData {
  struct ak_str session_id;
  struct ak_str result_id;
  struct ak_str data_chunk;
  uint32_t presence;
};
/* Encode group for `ListTasksDetailedResponse`. */
struct ak_efix_ListTasksDetailedResponse {
  int32_t page;
  int32_t total;
  uint32_t presence;
};
/* Decode group for `ListTasksDetailedResponse`. */
struct ak_dfix_ListTasksDetailedResponse {
  int32_t page;
  int32_t total;
  uint32_t presence;
};
/* Encode group for `ListTaskSummaryResponse`. */
struct ak_efix_ListTaskSummaryResponse {
  uint32_t presence;
};
/* Decode group for `ListTaskSummaryResponse`. */
struct ak_dfix_ListTaskSummaryResponse {
  uint32_t presence;
};
/* Encode group for `ListProbeResponse`. */
struct ak_efix_ListProbeResponse {
  uint32_t presence;
};
/* Decode group for `ListProbeResponse`. */
struct ak_dfix_ListProbeResponse {
  uint32_t presence;
};
/* Encode group for `UploadResultDataMessage`. */
struct ak_efix_UploadResultDataMessage {
  struct ak_efix_UploadResultData upload;
  uint32_t presence;
};
/* Decode group for `UploadResultDataMessage`. */
struct ak_dfix_UploadResultDataMessage {
  struct ak_dfix_UploadResultData upload;
  uint32_t presence;
};
/* Encode vtable for `TaskDetailed`. */
struct ak_evt_TaskDetailed {
  ak_loop_f loop_parent_task_ids;
  ak_loop_f loop_data_dependencies;
  ak_loop_f loop_expected_output_ids;
  ak_loop_f loop_retry_of_ids;
  ak_loop_f loop_options_options;
};
/* Encode vtable for `TaskSummary`. */
struct ak_evt_TaskSummary {
  ak_loop_f loop_options_options;
};
/* Encode vtable for `ListTasksDetailedResponse`. */
struct ak_evt_ListTasksDetailedResponse {
  ak_loop_f loop_tasks;
  const struct ak_evt_TaskDetailed *elem_tasks;
};
/* Decode vtable for `ListTasksDetailedResponse` (the push family, ABI v1 section 7.1). */
struct ak_dvt_ListTasksDetailedResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ListTasksDetailedResponse *);
  int64_t (*new_tasks)(ak_dec_ctx *, void *);
  void (*apply_tasks)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_TaskDetailed *);
  void (*add_tasks_parent_task_ids)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_tasks_data_dependencies)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_tasks_expected_output_ids)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_tasks_retry_of_ids)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_tasks_options_options)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_TaskOptionsOptionsEntry *, int32_t);
};
/* Encode vtable for `ListTaskSummaryResponse`. */
struct ak_evt_ListTaskSummaryResponse {
  ak_loop_f loop_tasks;
  const struct ak_evt_TaskSummary *elem_tasks;
};
/* Decode vtable for `ListTaskSummaryResponse` (the push family, ABI v1 section 7.1). */
struct ak_dvt_ListTaskSummaryResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ListTaskSummaryResponse *);
  int64_t (*new_tasks)(ak_dec_ctx *, void *);
  void (*apply_tasks)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_TaskSummary *);
  void (*add_tasks_options_options)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_TaskOptionsOptionsEntry *, int32_t);
};
/* Encode vtable for `ListProbeResponse`. */
struct ak_evt_ListProbeResponse {
  ak_loop_f loop_probes;
};
/* Decode vtable for `ListProbeResponse` (the push family, ABI v1 section 7.1). */
struct ak_dvt_ListProbeResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ListProbeResponse *);
  void (*add_probes)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_Probe *, int32_t);
};
/* Encode vtable for `UploadResultDataMessage`. */
struct ak_evt_UploadResultDataMessage {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `UploadResultDataMessage` (the push family, ABI v1 section 7.1). */
struct ak_dvt_UploadResultDataMessage {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_UploadResultDataMessage *);
};
intptr_t ak_encode_ListTasksDetailedResponse(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_ListTasksDetailedResponse *vt, const struct ak_efix_ListTasksDetailedResponse *fix);
int32_t ak_decode_ListTasksDetailedResponse(ak_dec_ctx *ctx, void *obj, const uint8_t *buf, size_t len, const struct ak_dvt_ListTasksDetailedResponse *vt);
int32_t ak_parse_ListTasksDetailedResponse(ak_dec_ctx *ctx, const uint8_t *buf, size_t len);
intptr_t ak_encode_ListTaskSummaryResponse(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_ListTaskSummaryResponse *vt, const struct ak_efix_ListTaskSummaryResponse *fix);
int32_t ak_decode_ListTaskSummaryResponse(ak_dec_ctx *ctx, void *obj, const uint8_t *buf, size_t len, const struct ak_dvt_ListTaskSummaryResponse *vt);
int32_t ak_parse_ListTaskSummaryResponse(ak_dec_ctx *ctx, const uint8_t *buf, size_t len);
intptr_t ak_encode_ListProbeResponse(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_ListProbeResponse *vt, const struct ak_efix_ListProbeResponse *fix);
int32_t ak_decode_ListProbeResponse(ak_dec_ctx *ctx, void *obj, const uint8_t *buf, size_t len, const struct ak_dvt_ListProbeResponse *vt);
int32_t ak_parse_ListProbeResponse(ak_dec_ctx *ctx, const uint8_t *buf, size_t len);
intptr_t ak_encode_UploadResultDataMessage(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_UploadResultDataMessage *vt, const struct ak_efix_UploadResultDataMessage *fix, const uint8_t *direct, size_t direct_len);
int32_t ak_decode_UploadResultDataMessage(ak_dec_ctx *ctx, void *obj, const uint8_t *buf, size_t len, const struct ak_dvt_UploadResultDataMessage *vt);