ffi/poc/csharp/src/Harness/GeneratedNounk/Abi.cs

#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_encode_ListTasksDetailedResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern nint ak_encode_ListTasksDetailedResponse__raw(void* obj, IntPtr ctx, ak_evt_ListTasksDetailedResponse* vt, ak_efix_ListTasksDetailedResponse* fix);
    internal static long N_ak_encode_ListTasksDetailedResponse;
    internal static nint ak_encode_ListTasksDetailedResponse(void* obj, IntPtr ctx, ak_evt_ListTasksDetailedResponse* vt, ak_efix_ListTasksDetailedResponse* fix) { System.Threading.Interlocked.Increment(ref N_ak_encode_ListTasksDetailedResponse); return ak_encode_ListTasksDetailedResponse__raw(obj, ctx, vt, fix); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_encode_ListTasksDetailedResponse(void* obj, IntPtr ctx, ak_evt_ListTasksDetailedResponse* vt, ak_efix_ListTasksDetailedResponse* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_encode_ListTasksDetailedResponse(void* obj, IntPtr ctx, ak_evt_ListTasksDetailedResponse* vt, ak_efix_ListTasksDetailedResponse* fix);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_decode_ListTasksDetailedResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_decode_ListTasksDetailedResponse__raw(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_ListTasksDetailedResponse* vt);
    internal static long N_ak_decode_ListTasksDetailedResponse;
    internal static int ak_decode_ListTasksDetailedResponse(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_ListTasksDetailedResponse* vt) { System.Threading.Interlocked.Increment(ref N_ak_decode_ListTasksDetailedResponse); return ak_decode_ListTasksDetailedResponse__raw(ctx, obj, buf, len, vt); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_decode_ListTasksDetailedResponse(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_ListTasksDetailedResponse* vt);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_decode_ListTasksDetailedResponse(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_ListTasksDetailedResponse* vt);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_parse_ListTasksDetailedResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_parse_ListTasksDetailedResponse__raw(IntPtr ctx, byte* buf, nuint len);
    internal static long N_ak_parse_ListTasksDetailedResponse;
    internal static int ak_parse_ListTasksDetailedResponse(IntPtr ctx, byte* buf, nuint len) { System.Threading.Interlocked.Increment(ref N_ak_parse_ListTasksDetailedResponse); return ak_parse_ListTasksDetailedResponse__raw(ctx, buf, len); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_parse_ListTasksDetailedResponse(IntPtr ctx, byte* buf, nuint len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_parse_ListTasksDetailedResponse(IntPtr ctx, byte* buf, nuint len);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_encode_ListProbeResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern nint ak_encode_ListProbeResponse__raw(void* obj, IntPtr ctx, ak_evt_ListProbeResponse* vt, ak_efix_ListProbeResponse* fix);
    internal static long N_ak_encode_ListProbeResponse;
    internal static nint ak_encode_ListProbeResponse(void* obj, IntPtr ctx, ak_evt_ListProbeResponse* vt, ak_efix_ListProbeResponse* fix) { System.Threading.Interlocked.Increment(ref N_ak_encode_ListProbeResponse); return ak_encode_ListProbeResponse__raw(obj, ctx, vt, fix); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_encode_ListProbeResponse(void* obj, IntPtr ctx, ak_evt_ListProbeResponse* vt, ak_efix_ListProbeResponse* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_encode_ListProbeResponse(void* obj, IntPtr ctx, ak_evt_ListProbeResponse* vt, ak_efix_ListProbeResponse* fix);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_decode_ListProbeResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_decode_ListProbeResponse__raw(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_ListProbeResponse* vt);
    internal static long N_ak_decode_ListProbeResponse;
    internal static int ak_decode_ListProbeResponse(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_ListProbeResponse* vt) { System.Threading.Interlocked.Increment(ref N_ak_decode_ListProbeResponse); return ak_decode_ListProbeResponse__raw(ctx, obj, buf, len, vt); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_decode_ListProbeResponse(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_ListProbeResponse* vt);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_decode_ListProbeResponse(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_ListProbeResponse* vt);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_parse_ListProbeResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_parse_ListProbeResponse__raw(IntPtr ctx, byte* buf, nuint len);
    internal static long N_ak_parse_ListProbeResponse;
    internal static int ak_parse_ListProbeResponse(IntPtr ctx, byte* buf, nuint len) { System.Threading.Interlocked.Increment(ref N_ak_parse_ListProbeResponse); return ak_parse_ListProbeResponse__raw(ctx, buf, len); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_parse_ListProbeResponse(IntPtr ctx, byte* buf, nuint len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_parse_ListProbeResponse(IntPtr ctx, byte* buf, nuint len);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_encode_ListTaskSummaryResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern nint ak_encode_ListTaskSummaryResponse__raw(void* obj, IntPtr ctx, ak_evt_ListTaskSummaryResponse* vt, ak_efix_ListTaskSummaryResponse* fix);
    internal static long N_ak_encode_ListTaskSummaryResponse;
    internal static nint ak_encode_ListTaskSummaryResponse(void* obj, IntPtr ctx, ak_evt_ListTaskSummaryResponse* vt, ak_efix_ListTaskSummaryResponse* fix) { System.Threading.Interlocked.Increment(ref N_ak_encode_ListTaskSummaryResponse); return ak_encode_ListTaskSummaryResponse__raw(obj, ctx, vt, fix); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_encode_ListTaskSummaryResponse(void* obj, IntPtr ctx, ak_evt_ListTaskSummaryResponse* vt, ak_efix_ListTaskSummaryResponse* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_encode_ListTaskSummaryResponse(void* obj, IntPtr ctx, ak_evt_ListTaskSummaryResponse* vt, ak_efix_ListTaskSummaryResponse* fix);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_decode_ListTaskSummaryResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_decode_ListTaskSummaryResponse__raw(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_ListTaskSummaryResponse* vt);
    internal static long N_ak_decode_ListTaskSummaryResponse;
    internal static int ak_decode_ListTaskSummaryResponse(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_ListTaskSummaryResponse* vt) { System.Threading.Interlocked.Increment(ref N_ak_decode_ListTaskSummaryResponse); return ak_decode_ListTaskSummaryResponse__raw(ctx, obj, buf, len, vt); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_decode_ListTaskSummaryResponse(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_ListTaskSummaryResponse* vt);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_decode_ListTaskSummaryResponse(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_ListTaskSummaryResponse* vt);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_parse_ListTaskSummaryResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_parse_ListTaskSummaryResponse__raw(IntPtr ctx, byte* buf, nuint len);
    internal static long N_ak_parse_ListTaskSummaryResponse;
    internal static int ak_parse_ListTaskSummaryResponse(IntPtr ctx, byte* buf, nuint len) { System.Threading.Interlocked.Increment(ref N_ak_parse_ListTaskSummaryResponse); return ak_parse_ListTaskSummaryResponse__raw(ctx, buf, len); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_parse_ListTaskSummaryResponse(IntPtr ctx, byte* buf, nuint len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_parse_ListTaskSummaryResponse(IntPtr ctx, byte* buf, nuint len);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_encode_UploadResultDataMessage", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern nint ak_encode_UploadResultDataMessage__raw(void* obj, IntPtr ctx, ak_evt_UploadResultDataMessage* vt, ak_efix_UploadResultDataMessage* fix, byte* direct, nuint direct_len);
    internal static long N_ak_encode_UploadResultDataMessage;
    internal static nint ak_encode_UploadResultDataMessage(void* obj, IntPtr ctx, ak_evt_UploadResultDataMessage* vt, ak_efix_UploadResultDataMessage* fix, byte* direct, nuint direct_len) { System.Threading.Interlocked.Increment(ref N_ak_encode_UploadResultDataMessage); return ak_encode_UploadResultDataMessage__raw(obj, ctx, vt, fix, direct, direct_len); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_encode_UploadResultDataMessage(void* obj, IntPtr ctx, ak_evt_UploadResultDataMessage* vt, ak_efix_UploadResultDataMessage* fix, byte* direct, nuint direct_len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_encode_UploadResultDataMessage(void* obj, IntPtr ctx, ak_evt_UploadResultDataMessage* vt, ak_efix_UploadResultDataMessage* fix, byte* direct, nuint direct_len);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_decode_UploadResultDataMessage", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_decode_UploadResultDataMessage__raw(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_UploadResultDataMessage* vt);
    internal static long N_ak_decode_UploadResultDataMessage;
